--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "express",
   "version": "1.0.0",
   "main": "knexfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+  "start": "node index.js"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
