--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "express",
   "version": "1.0.0",
   "main": "knexfile.js",
- "scripts": {
-  "start": "node index.js"
-},
-
+  "scripts": {
+    "start": "node index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "mysql2": "^3.11.2",
