--- a/nodejs/.env
+++ b/nodejs/.env
@@ -1,4 +1,6 @@
-TELEGRAM_TOKEN=6685274704:AAFR-NXKCnfe7RZy9tGq5Swn2A0tDkTsrBU
+#TELEGRAM_TOKEN=6685274704:AAFR-NXKCnfe7RZy9tGq5Swn2A0tDkTsrBU
+TELEGRAM_TOKEN=7510338289:AAEbfxSOjN-1ZC9CLTaSbmOju_814rbyr8g
+
 DB_HOST=localhost
 DB_USER=root
 # DB_PASSWORD=password
