--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -21,6 +21,7 @@
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.63.0",
     "pdfkit": "^0.15.0",
+    "react-icons": "^5.3.0",
     "uuidv4": "^6.2.13"
   }
 }
