--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,7 @@
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "mongoose": "^8.6.2",
     "primeflex": "^3.3.1",
@@ -25,12 +26,14 @@
     "primereact": "^10.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-signature-canvas": "^1.0.6",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
