--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_NAME=yourdatabase
 JWT_SECRET=YARED
 
 NODE_ENV=production
-API_URL=https://api.lomistock.com/express # Production URL
+API_URL=https://expressnode.vercel.app
 
 TWILIO_SID=AC5ed978b8db2e28af325a73ef8766ab7b
 TWILIO_AUTH_TOKEN=AC5ed978b8db2e28af325a73ef8766ab7b
