--- a/react/package.json
+++ b/react/package.json
@@ -25,6 +25,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
     "react": "^18.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
@@ -34,7 +35,8 @@
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
