--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "socket.io": "^4.8.1",
-    "twilio": "^5.3.0"
+    "twilio": "^5.3.0",
+    "vercel": "^41.3.0"
   }
 }
